# inventory_management_system

./: .env.example  .gitIgnore  README.md  pyproject.toml
src/: config.py  main.py
src/Schemas/: Stock.py  Supplier.py  Transaction.py  __init__.py  category.py  product.py
src/api/: catagory.py  product.py  stock.py  suplier.py
src/db/: database.py
src/models/: Categories.py  Products.py  Stock.py  Suppliers.py  Transactions.py  Users.py  __init__.py  order.py  product.py
src/repositories/: catagory_repository.py  product_repository.py  stock_repository.py  suplier_repository.py
src/schemas/: __init__.py  database.py  order.py  product.py
src/services/: catagory_service.py  product_service.py  stock_service.py  suplier_service.py
