[project]
name = "inventory-sales-system"
version = "0.1.0"
description = "Inventory and sales management system for small businesses with stock tracking, low-stock alerts, and sales analytics."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
